--- a/din_action/templates/din_action/index.html
+++ b/din_action/templates/din_action/index.html
@@ -3,19 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>XOXZO DIN Action</title>
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'din_action/style.css' %}" />
 </head>
 <body>
 <h1 style="text-align: center">XOXZO DIN Action</h1>
 <br>
-<form action="{% url 'select_action' %}" method="post">
+<form action="{% url 'select_action' %}" method="post" style="text-align: center">
   {% if actions %}
-    <select name="action_id">
-
+    <select name="action_id" style="font-size: x-large">
       {% for action in actions %}
         {%  if forloop.counter0 == selected_id %}
-          <option value="{{action.id}}" selected><h2>{{action.action_text}}</h2></option>
+          <option value="{{action.id}}" selected>{{action.action_text}}</option>
         {% else %}
-          <option value="{{action.id}}"><h2>{{action.action_text}}</h2></option>
+          <option value="{{action.id}}">{{action.action_text}}</option>
         {%  endif %}
       {% endfor %}
 
@@ -23,7 +24,7 @@
   {% else %}
     <p>No Actions are available.</p>
   {% endif %}
-  <input type="submit" value="Set" />
+  <input type="submit" value="Set" style="border-style: groove; font-size: x-large;"/>
   {% csrf_token %}
 </form>
 </body>
